# abhin4v.github.io

./: .dockerignore  .drone.yml  .gitignore  .gitmodules  .travis.yml  404.html  CNAME  Dockerfile  Dockerfile.base  README.md  abhinavsarkar-net.cabal  about.md  feed.atom  feed.xml  index.html  now.md  projects.md  purge_cf_cache.sh  robots.txt  site.cabal  site.hs  sitemap.xml  stack.yaml  staticman.yml
Site/: Activities.hs  Assets.hs  Collections.hs  Comments.hs  ERT.hs  Home.hs  Notes.hs  Pages.hs  Pandoc.hs  Photos.hs  PostCompiler.hs  Posts.hs  Readings.hs  ShortURLs.hs  Sitemap.hs  TOC.hs  Talks.hs  Util.hs  Webmentions.hs
Site/Activities/: Strava.hs
Site/Pandoc/: Compiler.hs
about/: index.html
activities/: index.html
archive/: index.html
code/: hlist.hs  hlist.html  hlist.md
comments/continuation-defunctionalization/: 20ae9e00-d469-11e9-91d9-43a14196f0fb.md  37763350-612c-11ea-ad3a-b3a8294e570b.md  3ed76610-d9d4-11eb-a144-03b5a5582d41.md  3f9c9c70-bac6-11e9-a1a2-31d6e7c4c684.md  4d79d5a0-e6a3-11eb-b5e9-91cf0c50fd1a.md  51f96340-ccd9-11eb-84ac-df30a6c6d48a.md  5c9a3200-d467-11e9-91d9-43a14196f0fb.md  725d6190-c0b8-11eb-a3b8-8b2c9ddf89b4.md  7b0d7e80-d468-11e9-91d9-43a14196f0fb.md  839dd820-be7d-11e9-ae78-c13e43ede01e.md  8618d270-bac8-11e9-93f2-01ca93bf28b4.md  ae8b9610-6938-11ea-8cc2-d947cd8d922c.md  b55762a0-bcbb-11e9-9090-77d6146a9c01.md  c316e080-bac9-11e9-93f2-01ca93bf28b4.md
comments/fast-sudoku-solver-in-haskell-1/: 02e66580-0aee-11eb-8a6b-f3c16b7b983b.md  04428450-d5f6-11e9-a954-d12ec3e6033a.md  05566550-d5f6-11e9-a954-d12ec3e6033a.md  1716c7d0-cf6b-11e9-9e1e-995a69f007b1.md  171a7150-cf6b-11e9-9e1e-995a69f007b1.md  1d2bc6b0-da39-11e9-b9aa-79160232f521.md  1d3a45a0-da39-11e9-b9aa-79160232f521.md  1d50dae0-da39-11e9-b9aa-79160232f521.md  21f5b6a0-264a-11ed-801e-bffb47c3cc39.md  26933e80-d4f9-11e9-9844-15a5c0b4b945.md  2f40f990-bdad-11e9-bb15-c18c9d95c417.md  2f4174e0-cf6b-11e9-9e1e-995a69f007b1.md  2f440cf0-cf6b-11e9-9e1e-995a69f007b1.md  2f699650-cf6b-11e9-9e1e-995a69f007b1.md  30936960-dd41-11e8-8f05-8de24e64c09b.md  3436a300-d6a3-11e9-a9a5-e7620515c8d5.md  38923bf0-cad3-11eb-a430-5dea1d6515f6.md  3a72e7a0-f2ed-11e8-9a9a-47a690f58ec4.md  3aea5f60-e7b4-11eb-b646-851bfe76ff61.md  3e0f1880-bc90-11e9-8539-6d990802deac.md  472e8920-ce6d-11e9-a132-87aca720a7c8.md  4732f5f0-ce6d-11e9-a132-87aca720a7c8.md  47362a40-ce6d-11e9-a132-87aca720a7c8.md  4a447d30-cf95-11e9-926d-e32ac2752b51.md  4a47d890-cf95-11e9-926d-e32ac2752b51.md  4a508b20-cf95-11e9-926d-e32ac2752b51.md  4a6a7bc0-cf95-11e9-926d-e32ac2752b51.md  4a7ca430-cf95-11e9-926d-e32ac2752b51.md  522485c0-bb6f-11e9-8658-1b29528f279b.md  59b25910-bd17-11eb-b7d3-79dd05f41d3d.md  5bad1e60-d521-11e9-a15a-fba900d2f411.md  606d3f30-7bcb-11e8-91bc-f795b759aa50.md  60b8cd50-0edc-11eb-be0a-1b161d01a393.md  60d1bf00-d6c9-11e9-84ee-3d6e13bb7255.md  618455a0-9b00-11eb-aa87-c9d425f87d69.md  6593c0d0-92a2-11e9-a48f-dbca4c61b42d.md  6c2c2da0-d5f1-11e9-a954-d12ec3e6033a.md  6c426b20-119a-11eb-a867-475fee25df46.md  7dfbbb50-6d0e-11e9-939d-8fa9d7745ddf.md  95100730-d689-11e9-adf5-e31f9778513e.md  (+17 more)
comments/fast-sudoku-solver-in-haskell-2/: 01eda150-0c23-11e9-a9b2-878f92a71035.md  0c1ac190-5e53-11ed-a51e-8fc3dd45a353.md  12feda40-d2bb-11e9-be9f-d193f98fdca0.md  140e43e0-bd73-11eb-97f5-85ce85ba1e2b.md  1573d4c0-cf40-11e9-8c1a-29334d853a78.md  15bf4d40-aee3-11eb-86c6-3543c8f6a1c0.md  1773d9e0-fea8-11e9-b4a4-7fb768da1e8e.md  1da3f0d0-b1ab-11ec-874d-0326c96b431a.md  21eca0e0-bdef-11e9-850f-251ab069619e.md  27e51cf0-bb5d-11e9-8190-613b4590121e.md  31bbe610-19ee-11ea-8cc8-a976b6327fc0.md  329dd5b0-4547-11e9-a637-b5d2f1d15b72.md  35e07620-852f-11e8-a1d5-1fd7d3dbc496.md  374d2360-3bd0-11ea-a7a3-41b240d619b6.md  37c6af30-6e6a-11ed-b511-f1373e0a2691.md  3c38f670-de53-11eb-873b-e1989ce2acb8.md  411b9470-9704-11e8-b481-a9676d49f862.md  449d6f50-95e1-11ea-9539-7dd29b9dc227.md  46f71b00-cb25-11eb-a430-5dea1d6515f6.md  (+40 more)
css/: _activities.scss  _adirondack.scss  _apron.scss  _archive.scss  _comments.scss  _consts.scss  _darkmodetoggle.scss  _default.scss  _descartes.scss  _fa.scss  _fonts.scss  _mixins.scss  _navigation.scss  _pager.scss  _posts.scss  _readings.scss  _sidenotes.scss  _subscription.scss  _syntax.scss  _toc.scss  _underline.scss  _webmentions.scss  activities.css  activities.scss  archive.css  archive.scss  article.css  article.scss  calendar-heatmap.css  code.css  code.scss  dark-theme.css  dark-theme.scss  default.css  default.scss  light-theme.css  light-theme.scss  notes.css  notes.scss  photos.css  (+14 more)
drafts/: continuation-defunctionalization.md  fast-sudoku-solver-in-haskell-1.md  fast-sudoku-solver-in-haskell-2.md  fast-sudoku-solver-in-haskell-3.md  fast-sudoku-solver-in-haskell-4.md  fast-sudoku-solver-in-haskell-5.md  index.html  solving-aoc3-with-haskell-interval-trees.md  twt-notes.md
files/: activities.json  hlist.hs  sudoku17.txt.bz2
js/: activities.js  calendar-heatmap.js  code-styling.js  comment-form.js  dark-mode-toggle.mjs  lazysizes.js  lazysizes.unload.js  photos.js  post-styling.js  projects.js  talk.js
notes/: index.html
now/: 2018-12-08.md  2019-02-11.md  2019-08-23.md  2019-09-03.md  index.html
photos/: index.html
posts/: continuation-defunctionalization.md  fast-sudoku-solver-in-haskell-1.md  fast-sudoku-solver-in-haskell-2.md  fast-sudoku-solver-in-haskell-3.md  index.html  ps-simple-rest-service-2.md  ps-simple-rest-service.md  static-comments-with-hakyll.md  twt-notes-1.md
projects/: index.html
readings/: index.html
tags/: index.html
talks/: clojure-conc-patterns.md  clojure-concurrency-you.md  fp-patterns.md  index.html  intro-to-conc-in-haskell.md  many-ways-to-concur.md  moving-people-with-clojure.md
templates/: activities.html  archive.html  atom-item.xml  atom.xml  book.html  code.html  comment-list.html  comment.html  default.html  matomo.html  mentions.html  navigation.html  notes.html  now.html  photos.html  post-list.html  post.html  readings.html  slides.html  subscription.html  tag-list.html  tag.html  talk.html
(+287 files in other folders)
