name:               abhinavsarkar-net
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , hakyll-sass
                  , pandoc
                  , pandoc-types
                  , containers
                  , blaze-html
                  , filepath
                  , time
                  , directory
                  , xml
  other-modules:    Site.TOC
                  , Site.ERT
                  , Site.Sitemap
  ghc-options:      -threaded
  default-language: Haskell2010
