name:               site
version:            1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.10.*
                  , hakyll-sass
                  , pandoc
                  , pandoc-types
                  , containers
                  , blaze-html
                  , filepath
                  , time
                  , directory
                  , xml
                  , xml-types
                  , hjsmin
                  , bytestring
                  , http-conduit
                  , feed
                  , split
                  , text
  other-modules:    Site.Activities
                  , Site.Assets
                  , Site.Collections
                  , Site.ERT
                  , Site.Pages
                  , Site.Posts
                  , Site.Readings
                  , Site.Sitemap
                  , Site.TOC
                  , Site.Util
  ghc-options:      -threaded -Wall
  default-language: Haskell2010
