name:               site
version:            1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.13.*
                  , hakyll-sass
                  , pandoc
                  , pandoc-types
                  , containers
                  , blaze-html
                  , filepath
                  , time
                  , directory
                  , xml
                  , xml-types
                  , hjsmin
                  , bytestring
                  , http-conduit
                  , http-types
                  , feed
                  , split
                  , text
                  , numerals
                  , aeson
                  , aeson-casing
                  , thumbnail-plus
                  , data-default
                  , resourcet
                  , random-shuffle
                  , pandoc-emphasize-code
  other-modules:    Site.Activities
                  , Site.Activities.Strava
                  , Site.Assets
                  , Site.Collections
                  , Site.Comments
                  , Site.ERT
                  , Site.Home
                  , Site.Notes
                  , Site.Pages
                  , Site.Pandoc
                  , Site.Photos
                  , Site.Posts
                  , Site.PostCompiler
                  , Site.Readings
                  , Site.ShortURLs
                  , Site.Sitemap
                  , Site.Talks
                  , Site.TOC
                  , Site.Util
                  , Site.Webmentions
  ghc-options:      -threaded -Wall -Wno-name-shadowing -Wno-type-defaults
  default-language: Haskell2010
